Fixed Tools ul z-index

--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ body {
     position: sticky;
     top: 0;
     justify-content: space-around;
-    z-index: -1; }
+    z-index: -3; }
   .main .main-section-container {
     margin: 2.5rem 1.2rem 0 1.2rem; }
   .main .sub-section-container {
@@ -256,7 +256,7 @@ body {
     justify-content: space-evenly;
     position: sticky;
     top: 0;
-    z-index: 0; }
+    z-index: -2; }
     .main .tools-section .cards-title {
       text-align: center; }
       .main .tools-section .cards-title h2 {
@@ -365,7 +365,7 @@ body {
   .main .video-container {
     position: sticky;
     top: 0;
-    z-index: 1; }
+    z-index: -1; }
     .main .video-container .video-content {
       position: relative;
       bottom: 90%;
@@ -810,7 +810,8 @@ body {
 /* || BOOTSTRAP OVERRIDES */
 .header .header-nav-bar .dropdown-menu {
   background-color: #3A79BD;
-  color: white; }
+  color: white;
+  z-index: 0; }
   .header .header-nav-bar .dropdown-menu li {
     margin-left: 0;
     margin-right: 0;
